<resources>
    <string name="app_name">Notedge</string>
    <string name="notes">Notes</string>
    <string name="search_your_notes">Search Your Notes</string>
    <string name="add_new_note_button">Add new note button</string>
    <string name="back_to_home_button">Back to home button</string>
    <string name="save_note_button">Save note button</string>
    <string name="note_title">Note Title</string>
    <string name="enter_note_here">Enter Note Here</string>
    <string name="delete_note_button">Delete note button</string>

    <string name="onboarding_slide1_title">Write Simply</string>
    <string name="onboarding_slide1_desc">Create Brilliantly</string>
    <string name="onboarding_slide1_subtitle">The perfect solution for anyone who needs simple notes</string>

    <string name="onboarding_slide2_title">Safe Protection</string>
    <string name="onboarding_slide2_desc">Keep Notes Securely</string>
    <string name="onboarding_slide2_subtitle">Your notes are stored locally and are not shared with third parties</string>

    <string name="onboarding_slide3_title">Easy Manage</string>
    <string name="onboarding_slide3_desc">Nothing Elaborate</string>
    <string name="onboarding_slide3_subtitle">Plain notes list for effective planning and organization</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="loading">Loading…</string>
    <string name="note_saved">Note saved successfully</string>
    <string name="removed">Note removed</string>
    <string name="date">09.05.2022</string>
    <string name="content">Content</string>
    <string name="drag_icon">Drag icon</string>
    <string name="remove_menu_item">Remove note</string>
    <string name="on_dot">ON DOT</string>
    <string name="delete">Delete</string>

</resources>