<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/oboarding_main_scene"
    android:background="@color/viridian_green"
    android:paddingBottom="@dimen/_24sdp">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/alice_blue"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/alice_blue"
        app:dotsCornerRadius="8dp"
        app:dotsSize="@dimen/margin_8"
        app:dotsSpacing="@dimen/margin_8"
        app:dotsStrokeColor="@color/alice_blue"
        app:dotsStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/_32sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/alice_blue"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_sea_green"
        android:text="@string/get_started"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/alice_blue"
        app:cornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>